# Borderless

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  i.txt  input.txt  linux_build.sh  map.txt  map_designer  map_designer.c  o.c  o.txt  output.h  output.txt  toc  toc.c
.github/workflows/: cmake-build-and-test.yml
src/: ascii.c  assets.c  assets.h  begin.h  bfs_and_raycast.h  entities.c  entities.h  font.h  game.c  game.h  input.c  input.h  main  main.c  maps.c  maps.h  mixer.c  mixer.h  raycast.h  renderer.c  renderer.h  sdl.c  sdl.h  sprites.h  subsystem.c  subsystem.h  util.c  util.h
src/assets/: font.c  map1.c  maps.c  sprites.c  testmap.c
